[gd_scene load_steps=16 format=3 uid="uid://bc0l7b3ejor6r"]

[ext_resource type="Script" uid="uid://10x8q0s1an26" path="res://scripts/ui/UIRootController.gd" id="1_oup3w"]
[ext_resource type="Script" uid="uid://c4dn570glcy7x" path="res://scripts/ui/BookMenuController.gd" id="2_8j85b"]
[ext_resource type="Script" uid="uid://curlpcdvio8gv" path="res://scripts/ui/HUDBarController.gd" id="2_vki1n"]
[ext_resource type="Script" uid="uid://beo03s5hv3ev2" path="res://scenes/ui/ToastFeedController.gd" id="3_8j85b"]
[ext_resource type="Script" uid="uid://dddduys4wmu4c" path="res://scripts/ui/InteractionPromptController.gd" id="4_t1a5e"]
[ext_resource type="Script" uid="uid://chasl8algokf0" path="res://scripts/ui/panels/BookkeepingPanel.gd" id="5_agjb1"]
[ext_resource type="Script" uid="uid://dvkp8pkeofsm0" path="res://scripts/ui/EncounterModalController.gd" id="5_vki1n"]
[ext_resource type="Script" uid="uid://d1tvn0bunw7b" path="res://scripts/ui/panels/Bookkeeping_StockPanel.gd" id="8_agjb1"]
[ext_resource type="Script" uid="uid://c7noqbch04ckd" path="res://scripts/ui/DayEndSummaryController.gd" id="9_r9yc6"]
[ext_resource type="Script" uid="uid://factionstatuspanel" path="res://scripts/ui/panels/FactionStatusPanel.gd" id="10_faction"]
[ext_resource type="Script" path="res://scripts/ui/panels/EmployeesHubPanel.gd" id="11_emp_hub"]
[ext_resource type="Script" path="res://scripts/ui/panels/EmployeesHirePanel.gd" id="12_emp_hire"]
[ext_resource type="Script" path="res://scripts/ui/panels/EmployeesMyPanel.gd" id="13_emp_my"]
[ext_resource type="Script" path="res://scripts/ui/panels/Bookkeeping_EmployeesPanel.gd" id="14_emp"]
[ext_resource type="Script" path="res://scripts/ui/ScreenFade.gd" id="15_fade"]
[ext_resource type="Script" uid="uid://taxreportpanel" path="res://scripts/ui/panels/TaxReportPanel.gd" id="16_tax_panel"]

[node name="UiRoot" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_oup3w")
interaction_prompt_path = NodePath("InteractionPrompt")
tax_panel_path = NodePath("TaxReportPanel")

[node name="HUDBar" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 200.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_vki1n")

[node name="BuildHint" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 330.0
offset_bottom = 35.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "Build: --"
visible = false

[node name="TimeLabel" type="Label" parent="HUDBar"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 900.0
offset_right = 939.0
offset_bottom = 35.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "--:--"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoneyLabel" type="Label" parent="HUDBar"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 2
vertical_alignment = 1

[node name="StockLabel" type="Label" parent="HUDBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 43.0
offset_right = 3.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label3" type="Label" parent="HUDBar"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="DayEndSummary" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.5
offset_top = -0.5
offset_right = -0.5
offset_bottom = -0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
z_index = 1000
z_as_relative = false
visible = false
script = ExtResource("9_r9yc6")

[node name="Panel" type="Panel" parent="DayEndSummary"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -100.0
offset_right = 225.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="DayEndSummary/Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 217.0
offset_bottom = 112.0

[node name="VBoxContainer" type="VBoxContainer" parent="DayEndSummary/Panel/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="DayLabel" type="Label" parent="DayEndSummary/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Nap v√©ge"
horizontal_alignment = 1

[node name="InfoLabel" type="Label" parent="DayEndSummary/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "A j√°t√©k sz√ºnetel."
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="Button" parent="DayEndSummary/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Tov√°bb / Alv√°s"

[node name="BookMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 100.0
offset_top = 200.0
offset_right = 500.0
offset_bottom = 500.0
focus_mode = 2
script = ExtResource("2_8j85b")
bookkeeping_panel_path = NodePath("../BookkeepingPanel")

[node name="MarginContainer" type="MarginContainer" parent="BookMenu"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 300.0

[node name="VBoxContainer" type="VBoxContainer" parent="BookMenu/MarginContainer"]
layout_mode = 2

[node name="K√∂nyv men√º" type="Label" parent="BookMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "F≈ë Men√º"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Gazdas√°g" type="Button" parent="BookMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "üí∞ Gazdas√°g"

[node name="Alkalmazottak" type="Button" parent="BookMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "üßç Alkalmazottak"

[node name="K√∂nyvel√©s" type="Button" parent="BookMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "üìò K√∂nyvel√©s"

[node name="FactionPanel" type="Control" parent="BookMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("10_faction")
list_path = NodePath("VBoxContainer/FactionList")

[node name="VBoxContainer" type="VBoxContainer" parent="BookMenu/MarginContainer/VBoxContainer/FactionPanel"]
layout_mode = 2

[node name="FactionTitle" type="Label" parent="BookMenu/MarginContainer/VBoxContainer/FactionPanel/VBoxContainer"]
layout_mode = 2
text = "ü§ù Frakci√≥k"

[node name="FactionList" type="VBoxContainer" parent="BookMenu/MarginContainer/VBoxContainer/FactionPanel/VBoxContainer"]
layout_mode = 2

[node name="Bez√°r" type="Button" parent="BookMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "‚ùå Bez√°r√°s"

[node name="BookkeepingPanel" type="Control" parent="."]
anchors_preset = 0
offset_left = 100.0
offset_top = 200.0
offset_right = 140.0
offset_bottom = 240.0
script = ExtResource("5_agjb1")
label_title_path = NodePath("MarginContainer/VBoxContainer/TitleLabel")
btn_stock_path = NodePath("MarginContainer/VBoxContainer/BtnStock")
btn_price_path = NodePath("MarginContainer/VBoxContainer/BtnPrice")
btn_recipe_path = NodePath("MarginContainer/VBoxContainer/BtnRecipe")
btn_tax_path = NodePath("MarginContainer/VBoxContainer/BtnTax")
btn_employees_path = NodePath("MarginContainer/VBoxContainer/BtnEmployees")
btn_log_path = NodePath("MarginContainer/VBoxContainer/BtnLog")
btn_dividend_path = NodePath("MarginContainer/VBoxContainer/BtnDividend")
btn_back_path = NodePath("MarginContainer/VBoxContainer/BtnBack")

[node name="MarginContainer" type="MarginContainer" parent="BookkeepingPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="BookkeepingPanel/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="BookkeepingPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "üìñ K√∂nyvel√©si men√º"

[node name="BtnStock" type="Button" parent="BookkeepingPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "üßæ √Årubevezet√©s"

[node name="BtnPrice" type="Button" parent="BookkeepingPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "üí∞ √Årkezel√©s"

[node name="BtnRecipe" type="Button" parent="BookkeepingPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "üç≥ Receptek szab√°lyoz√°sa"

[node name="BtnTax" type="Button" parent="BookkeepingPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "üí∏ √ÅFA √©s ad√≥z√°s"

[node name="BtnEmployees" type="Button" parent="BookkeepingPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "üßë‚Äçüíº Alkalmazottak kezel√©se"

[node name="BtnLog" type="Button" parent="BookkeepingPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "üìÑ Napl√≥, kimutat√°sok"

[node name="BtnDividend" type="Button" parent="BookkeepingPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "üè¶ Osztal√©k kiv√©t"

[node name="BtnBack" type="Button" parent="BookkeepingPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "‚ùå Vissza a f≈ëmen√ºbe"

[node name="Bookkeeping_StockPanel" type="Control" parent="."]
anchors_preset = 0
offset_left = 100.0
offset_top = 200.0
offset_right = 325.0
offset_bottom = 422.0
script = ExtResource("8_agjb1")

[node name="MarginContainer" type="MarginContainer" parent="Bookkeeping_StockPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Bookkeeping_StockPanel/MarginContainer"]
layout_mode = 2

[node name="ItemSelector" type="OptionButton" parent="Bookkeeping_StockPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Slider" type="HSlider" parent="Bookkeeping_StockPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ResultLabel" type="Label" parent="Bookkeeping_StockPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "üßæ √Årubevezet√©s"

[node name="BtnSubmit" type="Button" parent="Bookkeeping_StockPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "‚úÖ Hozz√°ad√°s a k√©szlethez"

[node name="BtnBack" type="Button" parent="Bookkeeping_StockPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "‚ùå Vissza a k√∂nyvel√©shez"

[node name="Bookkeeping_EmployeesPanel" type="Control" parent="."]
anchors_preset = 0
offset_left = 100.0
offset_top = 200.0
offset_right = 340.0
offset_bottom = 360.0
script = ExtResource("14_emp")

[node name="MarginContainer" type="MarginContainer" parent="Bookkeeping_EmployeesPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Bookkeeping_EmployeesPanel/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Bookkeeping_EmployeesPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "üßë‚Äçüíº Alkalmazottak kezel√©se"

[node name="EmployeeSelector" type="OptionButton" parent="Bookkeeping_EmployeesPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GrossInput" type="SpinBox" parent="Bookkeeping_EmployeesPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = 0.0
max_value = 1000000.0
step = 1000.0
value = 0.0

[node name="PresetSelector" type="OptionButton" parent="Bookkeeping_EmployeesPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CostLabel" type="Label" parent="Bookkeeping_EmployeesPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Teljes havi munk√°ltat√≥i k√∂lts√©g: -"

[node name="BtnSave" type="Button" parent="Bookkeeping_EmployeesPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "üíæ Ment√©s"

[node name="BtnBack" type="Button" parent="Bookkeeping_EmployeesPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "‚ùå Vissza a k√∂nyvel√©shez"

[node name="TaxReportPanel" type="Control" parent="."]
anchors_preset = 0
offset_left = 100.0
offset_top = 200.0
offset_right = 380.0
offset_bottom = 380.0
script = ExtResource("16_tax_panel")

[node name="MarginContainer" type="MarginContainer" parent="TaxReportPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="TaxReportPanel/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="TaxReportPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "üìä Ad√≥ riport"

[node name="CompanyMoney" type="Label" parent="TaxReportPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "C√©gp√©nz: -"

[node name="PersonalMoney" type="Label" parent="TaxReportPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Mag√°np√©nz: -"

[node name="PeriodInfo" type="Label" parent="TaxReportPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Id≈ëszak: -"

[node name="InputVat" type="Label" parent="TaxReportPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Levonhat√≥ √ÅFA: -"

[node name="OutputVat" type="Label" parent="TaxReportPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Fizetend≈ë √ÅFA: -"

[node name="Payable" type="Label" parent="TaxReportPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Fizetend≈ë most: -"

[node name="Status" type="Label" parent="TaxReportPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Ledger bet√∂lt√©sre v√°r."

[node name="PayButton" type="Button" parent="TaxReportPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "üí∏ Ad√≥fizet√©s"

[node name="BackButton" type="Button" parent="TaxReportPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "‚¨ÖÔ∏è Vissza a k√∂nyvel√©shez"

[node name="EmployeesHubPanel" type="Control" parent="."]
anchors_preset = 0
offset_left = 100.0
offset_top = 200.0
offset_right = 340.0
offset_bottom = 360.0
visible = false
script = ExtResource("11_emp_hub")

[node name="MarginContainer" type="MarginContainer" parent="EmployeesHubPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="EmployeesHubPanel/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="EmployeesHubPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "üßç Alkalmazottak"
horizontal_alignment = 1

[node name="BtnHire" type="Button" parent="EmployeesHubPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "üë∑ Alkalmazottak felv√©tele"

[node name="BtnMy" type="Button" parent="EmployeesHubPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "üë• Saj√°t alkalmazottak"

[node name="BtnBack" type="Button" parent="EmployeesHubPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "‚ùå Vissza a f≈ëmen√ºbe"

[node name="EmployeesHirePanel" type="Control" parent="."]
anchors_preset = 0
offset_left = 100.0
offset_top = 200.0
offset_right = 380.0
offset_bottom = 400.0
visible = false
script = ExtResource("12_emp_hire")

[node name="MarginContainer" type="MarginContainer" parent="EmployeesHirePanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="EmployeesHirePanel/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="EmployeesHirePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "üë∑ Felv√©tel"
horizontal_alignment = 1

[node name="Scroll" type="ScrollContainer" parent="EmployeesHirePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
vertical_scroll_mode = 3

[node name="List" type="VBoxContainer" parent="EmployeesHirePanel/MarginContainer/VBoxContainer/Scroll"]
layout_mode = 2

[node name="BtnBack" type="Button" parent="EmployeesHirePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "‚¨ÖÔ∏è Vissza"

[node name="EmployeesMyPanel" type="Control" parent="."]
anchors_preset = 0
offset_left = 100.0
offset_top = 200.0
offset_right = 380.0
offset_bottom = 400.0
visible = false
script = ExtResource("13_emp_my")

[node name="MarginContainer" type="MarginContainer" parent="EmployeesMyPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="EmployeesMyPanel/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="EmployeesMyPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "üë• Saj√°t alkalmazottak"
horizontal_alignment = 1

[node name="Scroll" type="ScrollContainer" parent="EmployeesMyPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
vertical_scroll_mode = 3

[node name="List" type="VBoxContainer" parent="EmployeesMyPanel/MarginContainer/VBoxContainer/Scroll"]
layout_mode = 2

[node name="BtnBack" type="Button" parent="EmployeesMyPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "‚¨ÖÔ∏è Vissza"

[node name="EncounterPopup" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ToastFeed" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_8j85b")

[node name="InteractionPrompt" type="PanelContainer" parent="."]
visible = false
z_index = 2000
z_as_relative = false
custom_minimum_size = Vector2(420, 420)
layout_mode = 0
offset_left = 40.0
offset_top = 40.0
offset_right = 156.0
offset_bottom = 80.0
mouse_filter = 2
script = ExtResource("4_t1a5e")

[node name="PromptLabel" type="Label" parent="InteractionPrompt"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "E ‚Äì Interakci√≥"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Modals" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="EncounterModal" type="Control" parent="Modals"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_vki1n")

[node name="Panel" type="Panel" parent="Modals/EncounterModal"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBox" type="VBoxContainer" parent="Modals/EncounterModal/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Title" type="Label" parent="Modals/EncounterModal/Panel/VBox"]
layout_mode = 2

[node name="Body" type="Label" parent="Modals/EncounterModal/Panel/VBox"]
layout_mode = 2

[node name="ChoiceA" type="Button" parent="Modals/EncounterModal/Panel/VBox"]
layout_mode = 2

[node name="ChoiceB" type="Button" parent="Modals/EncounterModal/Panel/VBox"]
layout_mode = 2

[node name="ScreenFade" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
focus_mode = 0
color = Color(0, 0, 0, 0)
z_index = 5000
z_as_relative = false
script = ExtResource("15_fade")
